PATCH /teams/:id
